crates/wdl-analysis/tests/validation/conflicting-sections/source.wdl
## This is a test of conflicting sections.

version 1.2

task foo {
    command <<<>>>

    runtime {
        
    }

    requirements {

    }
}

task bar {
    command <<<>>>

    requirements {
        
    }

    runtime {

    }
}
